--- a/index.html
+++ b/index.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Easy Shopping</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <section>
-        <header>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-            <a href=""></a>
-        </header>
-        <img src="img/imagem.png" alt="Ilustração do Projeto">
-    </section>
-    <section>
-        <h1>Easy Shopping <br>Via Mobile</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur  adipiscing elit. Donec lorem justo, sollicitudin vel ultricies sed, eleifend nec metus. Etiam vitae pellentesque dolor. </p>
-        <button>Get Started</button>
-    </section>
+
+    <main>
+        <section class="fora">
+            <h1>Easy Shopping <br>Via Mobile</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem justo, sollicitudin vel ultricies
+                sed, eleifend nec metus. Etiam vitae pellentesque dolor. </p>
+            <button>Get Started</button>
+        </section>
+        <section class="dentro">
+            <header>
+                <a href="#">Home</a>
+                <a href="#" class="selected">Work</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </header>
+            <img src="img/imagem.png" alt="Ilustração do Projeto">
+        </section>
+        
+    </main>
+
 </body>
+
 </html>
