--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 
     <main>
         <section class="fora">
-            <h1>Easy Shopping <br>Via Mobile</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem justo, sollicitudin vel ultricies
-                sed, eleifend nec metus. Etiam vitae pellentesque dolor. </p>
-            <button>Get Started</button>
+            <div>
+                <h1>Easy Shopping <br>Via Mobile</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lorem justo, sollicitudin vel ultricies
+                    sed, eleifend nec metus. Etiam vitae pellentesque dolor. </p>
+                <button>Get Started</button>
+            </div>
         </section>
         <section class="dentro">
             <header>
